test/programs/invalid_programs/return_outside_function.jm
#!SyntaxError

module foo
  return
end
